[package]
name = "copperhead"
version = "0.1.0"
authors = ["William Rudenmalm <me@whn.se>"]
build = "build.rs"

[lib]
name = "protos"
path = "src/protos/mod.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
futures = "0.1.16"
grpcio = "0.2.0"
protobuf = "1.4.1"
rand = "0.5"

[build-dependencies]
protoc-grpcio = "0.1.1"

